@@ -1,6 +1,10 @@
 
 DDMarlinPandora: Development package to integrate with DD4hep
 
+N.Nikiforou 10/02/2016:
+  - Started using the new facility by DD4hep that allows the accessing of detectors based on their
+    detector type flags. For now, just DDTrackCreatorCLIC was modified. The Marlin Processor parameters
+    associated with the vertex and tracker will soon be removed.
 
 N.Nikiforou 07/09/2015:
   - Many changes that require full implemetation of DDRec structures for all subdetectors 
